<resources>
    <string name="app_name">Vymo Assignment</string>
    <string name="text_pull_title_formatted">Pull Title :</string>
    <string name="text_pr_number_formatted">PR Number :</string>
    <string name="text_pull_status_formatted">Pull Status :</string>
    <string name="text_created_formatted">Created :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_github_owner_name">Github owner name</string>
    <string name="text_repo_name">Repo name</string>
    <string name="action_submit">Submit</string>
</resources>