<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activityViewModel"
            type="com.example.vymoassignment.viewmodel.FillGithubRepoDetailsActivityViewModel" />

        <variable
            name="submitClickRunnable"
            type="Runnable" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".ui.activity.FillGithubRepoDetailsActivity">

        <EditText
            android:id="@+id/ownerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/text_github_owner_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={activityViewModel.githubRepoDetails.ownerName}" />

        <EditText
            android:id="@+id/repoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/text_repo_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={activityViewModel.githubRepoDetails.repoName}" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:onClick="@{() -> submitClickRunnable.run()}"
            android:text="@string/action_submit"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</layout>