<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/pullTitleHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pull_title_formatted"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pullTitleValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pullTitleHeading"
            app:layout_constraintTop_toTopOf="@+id/pullTitleHeading"
            tools:text="[WIP] Loom and JDK 15 Testing" />

        <TextView
            android:id="@+id/prNumberHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/text_pr_number_formatted"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pullTitleValue" />

        <TextView
            android:id="@+id/prNumberValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/prNumberHeading"
            app:layout_constraintTop_toTopOf="@+id/prNumberHeading"
            tools:text="#576890" />

        <TextView
            android:id="@+id/pullStatusHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/text_pull_status_formatted"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prNumberValue" />

        <TextView
            android:id="@+id/pullStatusValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pullStatusHeading"
            app:layout_constraintTop_toTopOf="@+id/pullStatusHeading"
            tools:text="Open" />

        <TextView
            android:id="@+id/creatdHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/text_created_formatted"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pullStatusValue" />

        <TextView
            android:id="@+id/createdValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/creatdHeading"
            app:layout_constraintTop_toTopOf="@+id/creatdHeading"
            tools:text="Today" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>